<resources>
    <string name="app_name">Nestsed Json Object II</string>
    <string name="website">Website</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="user_details">User Details</string>
    <string name="user_id">Id</string>
    <string name="user_name">User Name</string>
    <string name="street">Street</string>
    <string name="suite">Suite</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="geo">GEO</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="company">Company</string>
    <string name="company_name">Company Name</string>
    <string name="catchphrase">CatchPhrase</string>
    <string name="company_bs">Company BS</string>
</resources>